--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "mockjs": "^1.0.0"
+    "mockjs": "^1.0.0",
+    "axios": "^0.19.2",
+    "vue": "^2.6.11"
   }
 }
